Project

General

Profile

Actions

Bug #17343

closed

Ractor can't clone frozen structures

Bug #17343: Ractor can't clone frozen structures

Added by marcandre (Marc-Andre Lafortune) almost 6 years ago. Updated almost 6 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 3.0.0dev (2020-11-26T00:37:38Z master af80df1820) [x86_64-darwin17]
[ruby-core:101087]

Description

Ractor.new([[]].freeze) {} # => FrozenError

See https://github.com/ruby/ruby/pull/3817

Actions

Also available in: PDF Atom